# INSPECT-AI_open_source

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  GETTING_STARTED.md  LLM_GUIDE.md  README.md  biome.json  bunfig.toml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  package.json  pyrightconfig.json  tsconfig.base.json  turbo.json
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 418fe11b4307_add_composite_indexes_and_schema_fixes.py  53bd03ba16c6_initial_complete_schema_jobs_check_.py  6fb69923e6a6_add_retraction_watch_tables.py  bcd8c4e76504_add_processing_time_seconds_to_jobs.py  c5ff50a895dc_add_performance_indexes_for_jobs_table.py  d2b7ef9c0a5f_add_reviewer_table_and_job_fk.py  e8f3d6a2b1c4_add_email_to_reviewers.py
apps/api/src/: main.py
apps/api/src/api/dependencies/: auth.py  reviewer.py
apps/api/src/api/v1/: api.py
apps/api/src/api/v1/endpoints/: jobs.py  reviewers.py  test.py
apps/api/tests/: conftest.py  setup_test_db.py
apps/api/tests/unit/: constants.py
apps/api/tests/unit/api/: test_inspect_sr_api.py
apps/api/tests/unit/fixtures/: __init__.py  data_fixtures.py  http_fixtures.py  service_fixtures.py
apps/api/tests/unit/mocks/: __init__.py  base.py  database_mock.py  genai_mock.py  grobid_mock.py  http_mock.py
apps/api/tests/unit/services/: test_grobid_service_unit.py  test_llm_service_unit.py  test_pubpeer_service_unit.py  test_registry_service_unit.py
apps/ui/: .gitignore  Dockerfile.production  (+9 more)
docs/: plan.md
scripts/: deploy.sh
(+76 files in other folders)
